--- a/contact.html
+++ b/contact.html
@@ -142,7 +142,7 @@
                         </li>
                      <li>
                          <i class="fal fa-clock"></i>
-                         <p>Monday to Friday: 9.00am to 16,pm</p>
+                         <p>Monday to Friday: 9 AM to 10 PM</p>
                         </li>
                  </div>
              </div>
